# src/index.js
@@ -13,18 +13,20 @@ const roomsRoutes = require('./routes/rooms.routes');
 const studentsRoutes = require('./routes/students.routes');
 const userRoutes = require('./routes/user.routes');
 
-
+// static folder uploads
+app.use("/uploads", express.static("uploads"));
 app.use('/images', express.static(path.join(__dirname, '../images')));
+
 app.use(bodyParser.json());
 app.use(cors());
 app.use(bodyParser.urlencoded({ extended: true }));
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
-
+app.use('/students', studentsRoutes); // ✅ แก้ตรงนี้
 app.use('/auth', authRoutes);
 app.use('/members', memberRoutes);
 app.use('/rooms', roomsRoutes);
-app.use('/stud  ents', studentsRoutes);
+
 app.use('/users', userRoutes);
 
 app.get("/", (req, res) => {
